Refactor of Exercise API for day 1-3.
Changed the API to use Stream<String> input, and int return.
Also cleaned up Day2 to use a common Command implementation.